trying to fix overflow-x issue on about page lol

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@
   }
   html,body
 {
-    overflow-x: initial; 
+    overflow-x: hidden; 
+    height:100%
 }
 .odibee-sans-regular {
     font-family: "Odibee Sans", sans-serif;
@@ -146,6 +147,10 @@ header.shadow .bx-moon{
 }
 
 header.shadow .bx-star{
+    color: var(--text-color);
+}
+
+header.shadow .bx-dna{
     color: var(--text-color);
 }
 
@@ -293,6 +298,12 @@ i.bx-moon{
     transition: 0.3s;
     text-decoration: none;
     margin-left: 48rem;
+}
+
+.bx-dna{
+    color: var(--bg-color);
+    transition: 0.3s;
+    text-decoration: none;
 }
 
 i.bx-sun{
@@ -873,12 +884,49 @@ mark {
 }
 
 /* Supply */
-.supply{
+/* .supply{
     display: grid;
     grid-template-columns: 20rem 20rem 20rem;
     justify-content: center;
     gap:1rem;
     padding: 4rem;
+} */
+
+.supply-body{
+    display: grid;
+    padding-top: 3.5rem;
+    justify-content: center;
+    align-items: start;
+    grid-template-columns:30rem 30rem;
+    gap: 2rem;
+    padding-bottom: 2.5rem;
+    background-color: var(--dark-text-color);
+}
+
+.supply-gallery{
+    display: grid;
+    justify-content: center;
+    align-items:start;
+    grid-template-columns: 15rem 15rem;
+    gap: 0.8rem;
+}
+
+.supply-gallery img{
+    box-shadow: 0 3px 14px hsla(0, 0%, 0%, 0.078);
+}
+ 
+.supply-section-name{
+    font-size: 4rem;
+    color: var(--dark-filter-color);
+    text-align: center;
+    margin: auto;
+    margin-top: 6rem;
+    margin-bottom: 1.5rem;
+    font-family: "Jersey 15", sans-serif;
+    font-weight: 900;
+}
+.supply-section-name span{
+    color: var(--container-color);
 }
 
 .supply-hat{
@@ -889,24 +937,11 @@ mark {
     padding: 2rem;
 } 
 
-.supply-image-content{
-    object-fit: cover;
-    object-position: center;
-    box-shadow: 0 2px 10px hsla(125, 76%, 74%, 0.479);
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    transition: transform .4s; /* Animation */
-}
-
 .supply-image-hat{
     transform: scale(1.5);
 }
 
 
-.supply-image-content:hover{
-    transform: scale(1.3);
-}
 /* Responsive */
 @media (max-width: 1060px) {
     .container {
@@ -1069,11 +1104,6 @@ mark {
         padding-left:0rem;
         margin-left:6rem !important;
     }
-    .about-home{
-        min-width: 300px;
-    background-size: 100%;
-    background-position-x: -20rem;
-    }
     .home{
         min-height: 300px;
     }
@@ -1100,7 +1130,6 @@ mark {
     .profile-desc{
         width: 17.5rem;
         line-height: 1.8rem;
-        margin-bottom: 0rem !important;
         margin-top: -0.6rem;
         margin-left: 2rem;
         margin-right: 0rem;
@@ -1178,7 +1207,46 @@ mark {
     .bxs-quote-right{
         font-size: 1.2rem;
     }
+    .supply-body{
+        display: grid;
+        padding-top: 3.5rem;
+        justify-content: center;
+        align-items: start;
+        grid-template-columns:30rem;
+        gap: 1rem;
+        padding-bottom: 2.5rem;
+        background-color: var(--dark-text-color);
+    }
+    .supply-gallery{
+        display: grid;
+        justify-content: center;
+        align-items:start;
+        grid-template-columns: 10rem 10rem;
+        gap: 0.8rem;
+    }
+    .supply-section-name{
+        font-size: 3rem;
+        color: var(--dark-filter-color);
+        text-align: center;
+        margin: auto;
+        margin-top: 6rem;
+        margin-bottom: 1.5rem;
+        font-family: "Jersey 15", sans-serif;
+        font-weight: 900;
+    }
     
+    .supply-hat{
+        display: grid;
+        grid-template-columns: 15rem;
+        justify-content: center;
+        gap:3rem;
+        padding: 1rem;
+        padding-top: 4rem;
+    } 
+    
+    .supply-image-hat{
+        transform: scale(1.5);
+    }
 }
 
 
